--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.6",
         "livewire/livewire": "^3.5",
+        "setasign/fpdi": "^2.6",
+        "setasign/fpdi-tcpdf": "^2.3",
         "spatie/laravel-html": "^3.11"
     },
     "require-dev": {
